Hedging bets on which .properties file is used by the build servers. Re #87.

--- a/Code/Mantid/API/test/Mantid.properties
+++ b/Code/Mantid/API/test/Mantid.properties
@@ -5,9 +5,12 @@ mantid.legs = 6
 logging.loggers.root.level = information
 logging.loggers.root.channel = fileChannel
 logging.channels.fileChannel.class = FileChannel
-logging.channels.fileChannel.path = KernelTest.log
+logging.channels.fileChannel.path = DataHandlingTest.log
 logging.channels.fileChannel.formatter.class = PatternFormatter
 logging.channels.fileChannel.formatter.pattern = %Y-%m-%d %H:%M:%S,%i [%I] %p %s - %t
 
 #Plugin configuration
 plugins.directory = ../../Bin/Shared
+
+#ManagedWorkspace.MinSize = 0
+ManagedWorkspace.DataBlockSize = 4000
