--- a/Code/Mantid/Kernel/test/Mantid.properties
+++ b/Code/Mantid/Kernel/test/Mantid.properties
@@ -11,3 +11,6 @@ logging.channels.fileChannel.formatter.pattern = %Y-%m-%d %H:%M:%S,%i [%I] %p %s
 
 #Plugin configuration
 plugins.directory = ../../Bin/Shared
+
+ManagedWorkspace.DataBlockSize = 4000
+ManagedWorkspace.FilePath = /nonsense/fdghjksdg
