re #81 VS build: name pthyon api .dll as pyd Also disable failing PthyonInterface tests

--- a/Code/Mantid/PythonAPI/PythonAPI.vcproj
+++ b/Code/Mantid/PythonAPI/PythonAPI.vcproj
@@ -54,7 +54,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="$(SolutionName)API.lib $(SolutionName)DataHandling.lib"
-				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).dll"
+				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).pyd"
 				AdditionalLibraryDirectories="../debug;../../Third_Party/lib/win32;c:\Python25\libs"
 				GenerateDebugInformation="true"
 			/>
@@ -123,7 +123,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="$(SolutionName)API.lib $(SolutionName)DataHandling.lib"
-				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).dll"
+				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).pyd"
 				AdditionalLibraryDirectories="../debug;../../Third_Party/lib/win32;c:\Python25\libs"
 			/>
 			<Tool
