* Add in option on scons windows debug build  (pass debug=1) * Add  IN_MANTID_*  defines to the CPP - these are needed to allow a correct selection of either DLLExport or DLLImport * Update various singleton classes to use DLLExport/DLLImport Refs #96.

--- a/Code/Mantid/API/SConscript
+++ b/Code/Mantid/API/SConscript
@@ -9,9 +9,11 @@ listCpps = MantidBuild.getCPPFiles(codeFolder)
 
 #Import environment
 Import('env')
+myenv = env.Clone()
 
+myenv.Append(CPPDEFINES=[('IN_MANTID_API',1)])
 #BUILD CODE
-shared = env.SharedLibrary('lib/MantidAPI', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
-#static = env.StaticLibrary('libstatic/MantidAPI', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
+shared = myenv.SharedLibrary('lib/MantidAPI', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'], PDB='lib/MantidAPI.pdb')
+#static = myenv.StaticLibrary('libstatic/MantidAPI', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'], PDB='libstatic/MantidAPI.pdb')
 retval = { 'shared': shared, 'static': shared, 'libs': [ 'MantidAPI' ] }
 Return('retval')
