--- a/Code/Mantid/Kernel/SConscript
+++ b/Code/Mantid/Kernel/SConscript
@@ -9,9 +9,11 @@ listCpps = MantidBuild.getCPPFiles(codeFolder)
 
 #Import environment
 Import('env')
+myenv = env.Clone()
+myenv.Append(CPPDEFINES=[('IN_MANTID_KERNEL',1)])
 
 #BUILD CODE
-shared = env.SharedLibrary('lib/MantidKernel', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
-#static = env.StaticLibrary('libstatic/MantidKernel', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
+shared = myenv.SharedLibrary('lib/MantidKernel', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'], PDB='lib/MantidKernel.pdb')
+#static = myenv.StaticLibrary('libstatic/MantidKernel', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'], PDB='libstatic/MantidKernel.pdb')
 retval = { 'shared': shared, 'static': shared, 'libs': [ 'MantidKernel' ] }
 Return('retval')
