--- a/Code/Mantid/DataHandling/SConscript
+++ b/Code/Mantid/DataHandling/SConscript
@@ -11,9 +11,11 @@ listCpps.append(MantidBuild.getCPPFiles(codeFolder + '/NeXusUtils'))
 
 #Import environment
 Import('env')
+myenv = env.Clone()
+myenv.Append(CPPDEFINES=[('IN_MANTID_DATA_HANDLING',1)])
 
 #BUILD CODE
-shared = env.SharedLibrary('lib/MantidDataHandling', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
-#static = env.StaticLibrary('libstatic/MantidDataHandling', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
+shared = myenv.SharedLibrary('lib/MantidDataHandling', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'], PDB='lib/MantidDataHandling.pdb')
+#static = myenv.StaticLibrary('libstatic/MantidDataHandling', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'],PDB='libstatic/MantidDataHandling.pdb')
 retval = { 'shared': shared, 'static': shared, 'libs': ['MantidDataHandling'] }
 Return('retval')
