--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -101,8 +101,10 @@ if os.name == 'nt':
 		cflags = ['-g', '-O2', '-DPOCO_DLL']
 		env.Append(LINKFLAGS=['-g','-Wl,--export-all-symbols'])
 	else :
-		cflags = ['/Ox', '/Ot', '/W3','/EHsc', '/MD', '/TP', '/DMS_VISUAL_STUDIO=1', '/DWIN32', '/D_WINDOWS', '/DPOCO_DLL', '/DWINVER=0x0500', '/D_USE_MATH_DEFINES', '/D_SCL_SECURE_NO_WARNINGS', '/D_CRT_SECURE_NO_WARNINGS', '/wd4275']
-
+		if int(debug) :
+			cflags = [ '/W3', '/Od', '/FD', '/EHsc', '/MDd', '/TP', '/D_DEBUG', '/DMS_VISUAL_STUDIO=1', '/DWIN32', '/D_WINDOWS', '/DPOCO_DLL', '/DWINVER=0x0500', '/D_USE_MATH_DEFINES', '/D_SCL_SECURE_NO_WARNINGS', '/D_CRT_SECURE_NO_WARNINGS', '/wd4275', '/wd4996' ]
+		else :
+			cflags = ['/Ox', '/Ot', '/W3','/EHsc', '/MD', '/TP', '/DMS_VISUAL_STUDIO=1', '/DWIN32', '/D_WINDOWS', '/DPOCO_DLL', '/DWINVER=0x0500', '/D_USE_MATH_DEFINES', '/D_SCL_SECURE_NO_WARNINGS', '/D_CRT_SECURE_NO_WARNINGS', '/wd4275']
 else:
 	cppPaths.append('/usr/include/python' + sys.version[0:3])
 	cppPaths.append(poco_path +'Foundation/include/')
@@ -165,7 +167,7 @@ env.Replace(MYLIBLIST=libList)
 env.Replace(MYLIBDIRLIST=libDirList)
 
 
-Export('env')
+#Export('env')
 
 #Real work begins here
 subProjs = []
@@ -186,7 +188,7 @@ static_libraries = []
 lib_list = []
 orig_libs = env['MYLIBLIST']
 for subproj in subProjs:
-	ret = SConscript(subproj+'/SConscript')
+	ret = SConscript([subproj+'/SConscript'], exports='env')
 	env.Install('Bin/Shared', ret['shared'])
 	#env.Install('Bin/Static', ret['static'])
 	shared_libraries.insert(0,ret['shared'])
@@ -198,7 +200,7 @@ env.Replace(SHARED_LIST=shared_libraries)
 #env.Replace(STATIC_LIST=static_libraries)
 
 # main program
-ret = SConscript('Main/SConscript')
+ret = SConscript(['Main/SConscript'], exports='env')
 env.Install('Bin/Shared', ret['shared'])
 
 skiptest=ARGUMENTS.get('skiptest',0)
@@ -206,11 +208,11 @@ if not int(skiptest):
 	print 'Building Tests.  Specify -Q "skiptest=1" to skip the tests'
 	# tests
 	if os.name == 'nt':
-		ret = SConscript('Build/Tests/SConscript')
+		ret = SConscript(['Build/Tests/SConscript'], exports='env')
 	else:
 		cxxtestgen = env.WhereIs('cxxtestgen.py')
 		if cxxtestgen != None :
-			ret = SConscript('Build/Tests/SConscript')
+			ret = SConscript(['Build/Tests/SConscript'], exports='env')
 		else :
 			print 'CXXTESTGEN is not installed - tests will not be built'
 else:
