--- a/Code/Mantid/Services/SConscript
+++ b/Code/Mantid/Services/SConscript
@@ -9,9 +9,11 @@ listCpps = MantidBuild.getCPPFiles(codeFolder)
 
 #Import environment
 Import('env')
+myenv = env.Clone()
+myenv.Append(CPPDEFINES=[('IN_MANTID_SERVICES',1)])
 
 #BUILD CODE
-shared = env.SharedLibrary('lib/MantidServices', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
-static = env.StaticLibrary('libstatic/MantidServices', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
+shared = myenv.SharedLibrary('lib/MantidServices', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'], PDB='lib/MantidServices.pdb')
+static = myenv.StaticLibrary('libstatic/MantidServices', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'], PDB='libstatic/MantidServices.pdb')
 retval = { 'shared': shared, 'static': static, 'libs': [ 'MantidServices' ] }
 Return('retval')
