--- a/Code/Mantid/DataObjects/DataObjects.vcproj
+++ b/Code/Mantid/DataObjects/DataObjects.vcproj
@@ -40,7 +40,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="inc;../Kernel/inc;../Geometry/inc;../API/inc;../../Third_Party/include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;POCO_DLL;WINVER=0x0500"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;POCO_DLL;WINVER=0x0500;IN_MANTID_DATA_OBJECTS=1"
 				RuntimeLibrary="3"
 				DebugInformationFormat="3"
 			/>
@@ -111,7 +111,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="3"
 				AdditionalIncludeDirectories="inc;../Kernel/inc;../Geometry/inc;../API/inc;../../Third_Party/include"
-				PreprocessorDefinitions="WIN32;_WINDOWS;POCO_DLL;WINVER=0x0500"
+				PreprocessorDefinitions="WIN32;_WINDOWS;POCO_DLL;WINVER=0x0500;IN_MANTID_DATA_OBJECTS=1"
 				RuntimeLibrary="2"
 			/>
 			<Tool
