--- a/Code/Mantid/Services/SConscript
+++ b/Code/Mantid/Services/SConscript
@@ -11,9 +11,10 @@ listCpps = MantidBuild.getCPPFiles(codeFolder)
 Import('env')
 myenv = env.Clone()
 myenv.Append(CPPDEFINES=[('IN_MANTID_SERVICES',1)])
+listSharedObjects = MantidBuild.getSharedObjects(listCpps, myenv)
 
 #BUILD CODE
 shared = myenv.SharedLibrary('lib/MantidServices', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'], PDB='lib/MantidServices.pdb')
 static = myenv.StaticLibrary('libstatic/MantidServices', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'], PDB='libstatic/MantidServices.pdb')
-retval = { 'shared': shared, 'static': static, 'libs': [ 'MantidServices' ] }
+retval = { 'shared': shared, 'static': static, 'sharedobjs' : listSharedObjects, 'libs': [ 'MantidServices' ] }
 Return('retval')
