Removed multiple .properties. Refs #95

--- a/Code/Mantid/API/test/Mantid.properties
+++ b/Code/Mantid/API/test/Mantid.properties
@@ -2,10 +2,10 @@
 mantid.legs = 6
 
 #logging configuration
-logging.loggers.root.level = information
+logging.loggers.root.level = debug
 logging.loggers.root.channel = fileChannel
 logging.channels.fileChannel.class = FileChannel
-logging.channels.fileChannel.path = DataHandlingTest.log
+logging.channels.fileChannel.path = Test.log
 logging.channels.fileChannel.formatter.class = PatternFormatter
 logging.channels.fileChannel.formatter.pattern = %Y-%m-%d %H:%M:%S,%i [%I] %p %s - %t
 
@@ -14,3 +14,4 @@ plugins.directory = ../../Bin/Shared
 
 #ManagedWorkspace.MinSize = 0
 ManagedWorkspace.DataBlockSize = 4000
+ManagedWorkspace.FilePath = /nonsense/fdghjksdg
