--- a/Code/Mantid/DataObjects/test/Mantid.properties
+++ b/Code/Mantid/DataObjects/test/Mantid.properties
@@ -10,7 +10,7 @@ logging.channels.fileChannel.formatter.class = PatternFormatter
 logging.channels.fileChannel.formatter.pattern = %Y-%m-%d %H:%M:%S,%i [%I] %p %s - %t
 
 #Plugin configuration
-plugins.directory = ../../Bin/Shared
+plugins.directory = ../../Bin/Plugins
 
 ManagedWorkspace.DataBlockSize = 4000
 ManagedWorkspace.FilePath = /nonsense/fdghjksdg
