--- a/Code/Mantid/UserAlgorithms/SConscript
+++ b/Code/Mantid/UserAlgorithms/SConscript
@@ -1,5 +1,5 @@
 env = Environment()
-incs = ['/home/mjc23/mantid/Code/Mantid/API/inc', '/home/mjc23/mantid/Code/Mantid/Kernel/inc', '/home/mjc23/mantid/Code/Mantid/Geometry/inc']
+incs = ['../API/inc', '../Kernel/inc', '../Geometry/inc']
 
 env.Append(CPPPATH=incs)
 shared = env.SharedLibrary('UsersAlgorithms', 'HelloWorldAlgorithm.cpp')
