--- a/Code/Mantid/UserAlgorithms/SConscript
+++ b/Code/Mantid/UserAlgorithms/SConscript
@@ -1,8 +1,20 @@
-env = Environment()
-incs = ['../API/inc', '../Kernel/inc', '../Geometry/inc']
+import os
+import MantidBuild
 
-env.Append(CPPPATH=incs)
-shared = env.SharedLibrary('UsersAlgorithms', 'HelloWorldAlgorithm.cpp')
-retval = { 'shared': shared}
+#GET LIST OF CPPS
+codeFolder = os.path.abspath('.')
+listCpps = MantidBuild.getCPPFiles(codeFolder)
+
+#Import environment
+Import('env')
+myenv = env.Clone()
+
+myenv.Append(CPPDEFINES=[('IN_MANTID_USER_ALGORITHMS',1)])
+
+listSharedObjects = MantidBuild.getSharedObjects(listCpps, myenv)
+
+#env.Append(CPPPATH=incs)
+shared = env.SharedLibrary('UsersAlgorithms', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'], PDB='lib/UserAlgorithms.pdb')
+retval = { 'shared': shared }
 Return('retval')
 
