Workaround for logging problem. The static instance of the Logger gets created at a random time and causes problems for singletons that get created as part of other objects static constrcutors. As a workaround I have moved the Logger instance into the class itself for singletons.
Refs #96.

--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -215,7 +215,7 @@ for i in range(len(shared_objects)) :
 # one big shared library
 #
 if int(bigshared) :
-    big_shared = env.SharedLibrary('Bin/Shared/Mantid', shared_objects, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'], PDB='Bin/Shared/Mantid.pdb')
+    big_shared = env.SharedLibrary('Bin/Shared/Mantid', shared_objects, LIBS=libList, LIBPATH=env['MYLIBDIRLIST'], PDB='Bin/Shared/Mantid.pdb')
     env.Replace(MYLIBLIST=['Mantid'] + orig_libs)
     
 #User Algs
